--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
 }
 .image {
  height: 100vh;
+ width: 30vw;
 }
 #logo-background {
   background-color: black;
@@ -29,6 +30,7 @@ body{
 }
 #logo{
   height: 15vh;
+  width: 5vw;
   margin-left: 10vh;
 }
 #business-name{
@@ -37,6 +39,7 @@ body{
   display: flex;
   font-size: 3vw;
   font-family: norse, Arial, Helvetica, sans-serif;
+  margin-left: 1vw;
 }
 /*right side*/
 .right-container{
