--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
   display: flex;
 }
 #information {
-  font-size: x-large;
+  font-size: 22px;
   font-weight: bolder;
   margin-top: 10vh;
 }
@@ -61,13 +61,30 @@ body{
   margin-top: 2vh;
 }
 .middle-right-container{
-  display: flex;
-  flex-direction: column;
   height: 33vh;
 }
 #content{
   margin-top: 3vh;
 }
+#caption{
+  font-size: 22px;
+  font-weight: bolder;
+}
+form{
+  margin-top: 25px;
+  width: 600px;
+}
+.form-row-one,
+.form-row-two,
+.form-row-three{
+  display: flex;
+  justify-content: space-between;
+}
+.form-layout{
+  display: flex;
+  flex-direction: column;
+}
+
 .bottom-right-container{
   background-color: #f2f5fc;
   height: 34vh;
