--- a/style.css
+++ b/style.css
@@ -90,10 +90,9 @@ input{
   width: 12vw;
   height: 18px;
   border: 2px solid #777777;
-  border-radius: 5px;
-}
+  border-radius: 9px}
 input:invalid{
-  border: 2px solid red;
+  border: 2px sol9d d;
 }
 .bottom-right-container{
   background-color: #f2f5fc;
@@ -107,6 +106,15 @@ input:invalid{
 }
 button{
   margin-top: 30px;
+  background-color: rgb(80, 94, 163);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: 900;
+}
+a{
+  color: rgb(80, 94, 163);
+  text-decoration: none;
 }
 .bottom-right-container > div {
   margin-top: 25px;
