--- a/style.css
+++ b/style.css
@@ -90,10 +90,19 @@ input{
   width: 200px;
   height: 20px;
   border: 2px solid #777777;
-  border-radius: 9px
+  border-radius: 9px;
+  padding-left: 6px;
 }
 input:invalid{
   border: 2px solid red;
+}
+.pwd-error-visible {
+  display: block !important;
+  color: #bd2625;
+  font-size: 12px;
+}
+.pwd-error-hidden {
+  display: none;
 }
 .bottom-right-container{
   background-color: #f2f5fc;
